--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "multihashes": "^3.0.1",
     "node-vibrant": "^3.1.5",
     "polished": "^3.3.2",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^1.17.0",
     "qs": "^6.9.4",
     "react": "^16.13.1",
@@ -107,7 +108,8 @@
     "build": "CI= GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "integration-test": "start-server-and-test 'serve build -l 3000' http://localhost:3000 'cypress run'"
+    "integration-test": "start-server-and-test 'serve build -l 3000' http://localhost:3000 'cypress run'",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": "react-app",
@@ -128,5 +130,7 @@
     ]
   },
   "license": "GPL-3.0-or-later",
-  "dependencies": {}
+  "dependencies": {
+    "patch-package": "^6.4.6"
+  }
 }
